--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
             "email": "justin.rainbow@gmail.com"
         }
     ],
+    "require": {
+        "php": ">=5.3.0"
+    },
     "autoload": {
         "psr-0": { "JsonSchema": "src/" }
     }
