Fixed travis.yml config for composer

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ php:
 
 before_script:
   - wget --quiet http://getcomposer.org/composer.phar
-  - php composer.phar install --install-suggests
+  - php composer.phar install
