Change to SPDX License Identifier (BSD-3-Clause) for composer
http://getcomposer.org/doc/04-schema.md#license

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["json", "schema"],
     "homepage": "https://github.com/justinrainbow/json-schema",
     "type": "library",
-    "license": "NewBSD",
+    "license": "BSD-3-Clause",
     "version": "1.1.0",
     "authors": [
         {
