--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
 
 before_script:
   - wget --quiet http://getcomposer.org/composer.phar
-  - php composer.phar install --install-suggests
+  - php composer.phar install
   - cp phpunit.xml.dist phpunit.xml
 
 script: phpunit
