--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ php:
   - 5.4
 
 before_script:
-  - wget --quiet http://getcomposer.org/composer.phar
-  - php composer.phar install
-  - cp phpunit.xml.dist phpunit.xml
+  - composer install
 
-script: phpunit
+script: phpunit --coverage-text
