--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,16 @@
     "require": {
         "php": ">=5.3.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~3.7.0"
+    },
     "autoload": {
         "psr-0": { "JsonSchema": "src/" }
     },
-    "bin": ["bin/validate-json"]
+    "bin": ["bin/validate-json"],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.4.x-dev"
+        }
+    }
 }
