--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,21 @@
             "email": "seroscho@googlemail.com"
         }
     ],
+    "repositories": [{
+        "type": "package",
+        "package": {
+            "name": "json-schema/JSON-Schema-Test-Suite",
+            "version": "1.1.0",
+            "source": {
+                "url": "https://github.com/json-schema/JSON-Schema-Test-Suite",
+                "type": "git",
+                "reference": "1.1.0"
+            }
+        }
+    }],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "json-schema/JSON-Schema-Test-Suite": "1.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7.0"
