--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,10 @@
         }
     }],
     "require": {
-        "php": ">=5.3.0",
-        "json-schema/JSON-Schema-Test-Suite": "1.1.0"
+        "php": ">=5.3.0"
     },
     "require-dev": {
+        "json-schema/JSON-Schema-Test-Suite": "1.1.0",
         "phpunit/phpunit": "~3.7.0"
     },
     "autoload": {
