--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,14 @@ php:
   - 5.5
 
 before_script:
-  - composer install --dev
+  - sudo apt-get install pypy
+  - composer selfupdate
+  - composer install
+  
+install:
+  - pip install -q Sphinx
 
-script: phpunit --coverage-text
+script:
+  - cd docs
+  - make linkcheck
+  - phpunit --coverage-text
