add specific php version 5.3.3 to validate issue #84
- add composer install option '--prefer-source', see issue travis-ci/travis-ci#1385

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 
 php:
+  - 5.3.3
   - 5.3
   - 5.4
   - 5.5
@@ -8,7 +9,7 @@ php:
 before_script:
   - sudo apt-get -y install pypy python-sphinx graphviz
   - composer selfupdate
-  - composer install
+  - composer install --prefer-source
 
 script:
   - cd docs && make linkcheck && cd ..
