--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ php:
   - 5.3
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
+ 
+matrix:
+    allow_failures:
+        - php: hhvm
 
 before_script:
   - sudo apt-get -y install pypy python-sphinx graphviz
