--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7
   - hhvm
  
 matrix:
     allow_failures:
+        - php: 7
         - php: hhvm
 
 install:
