--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
     - php: 5.4
     - php: 5.5
     - php: 5.6
-      env: CHECK_LINKS=true
+      env: CHECK_LINKS=true BUILD_DOCS=true
     - php: 7
     - php: hhvm
   allow_failures:
@@ -23,5 +23,5 @@ install:
 
 script:
   - if [[ "$CHECK_LINKS" == "true" ]]; then cd docs && make linkcheck && cd ..; fi
-  - vendor/bin/phpdoc -d src -t docs-api
+  - if [[ "$BUILD_DOCS" == "true" ]]; then vendor/bin/phpdoc -d src -t docs-api; fi
   - vendor/bin/phpunit --coverage-text
