--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 
 install:
   - sudo apt-get -y install pypy python-sphinx graphviz
-  - travis_retry composer update --no-interaction --prefer-source
+  - travis_retry composer install --no-interaction --prefer-source
 
 script:
   - cd docs && make linkcheck && cd ..
