--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,11 @@
         "type": "package",
         "package": {
             "name": "json-schema/JSON-Schema-Test-Suite",
-            "version": "1.1.2",
+            "version": "1.2.0",
             "source": {
                 "url": "https://github.com/json-schema/JSON-Schema-Test-Suite",
                 "type": "git",
-                "reference": "1.1.2"
+                "reference": "1.2.0"
             }
         }
     }],
@@ -40,7 +40,7 @@
         "php": ">=5.3.3"
     },
     "require-dev": {
-        "json-schema/JSON-Schema-Test-Suite": "1.1.2",
+        "json-schema/JSON-Schema-Test-Suite": "1.2.0",
         "phpunit/phpunit": "^4.8.22",
         "phpdocumentor/phpdocumentor": "~2"
     },
@@ -48,7 +48,7 @@
         "psr-4": { "JsonSchema\\": "src/JsonSchema/" }
     },
     "autoload-dev": {
-        "psr-4": { "JsonSchema\\Tests\\": "tests/JsonSchema/Tests/" }
+        "psr-4": { "JsonSchema\\Tests\\": "tests/" }
     },
     "bin": ["bin/validate-json"],
     "extra": {
