--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,8 @@
     }],
     "require": {
         "php": ">=5.3.3",
-        "robotdance/php-i18n": "0.*",
-        "robotdance/php-app-config": "0.*"
+        "robotdance/php-i18n": "0.0.7",
+        "robotdance/php-app-config": "0.0.8"
     },
     "require-dev": {
         "json-schema/JSON-Schema-Test-Suite": "1.2.0",
