--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: false
 language: php
 
+cache:
+    directories:
+      - $HOME/.composer/cache
+
 matrix:
   fast_finish: true
   include:
@@ -8,16 +12,20 @@ matrix:
     - php: 5.4
     - php: 5.5
     - php: 5.6
+    - php: 7.0
       env: WITH_COVERAGE=true
-    - php: 7
+    - php: 7.1
+    - php: 'nightly'
     - php: hhvm
+  allow_failures:
+    - php: 'nightly'
 
 before_install:
-  - if [[ "$WITH_COVERAGE" != "true" && "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then phpenv config-rm xdebug.ini; fi
+  - if [[ "$WITH_COVERAGE" != "true" && "$TRAVIS_PHP_VERSION" != "hhvm" && "$TRAVIS_PHP_VERSION" != "nightly" && "$TRAVIS_PHP_VERSION" != "7.1" ]]; then phpenv config-rm xdebug.ini; fi
   - composer selfupdate
 
 install:
-  - travis_retry composer install --no-interaction --prefer-source
+  - travis_retry composer install --no-interaction --prefer-dist
 
 script:
-  - if [[ "$WITH_COVERAGE" == "true" ]]; then vendor/bin/phpunit --coverage-text; else vendor/bin/phpunit; fi
+  - if [[ "$WITH_COVERAGE" == "true" ]]; then composer coverage; else composer test; fi
