--- a/composer.json
+++ b/composer.json
@@ -54,5 +54,9 @@
         "branch-alias": {
             "dev-master": "3.0.x-dev"
         }
+    },
+    "scripts": {
+        "test" : "vendor/bin/phpunit",
+        "coverage" : "vendor/bin/phpunit  --coverage-text"
     }
 }
