Refactor to simplify the public API and make adding features easier
This commit makes the following changes:
 * Split the Constraint class to make Validator independent from it
 * Add Validator::validate() as the main entry point
 * Turn Validator::coerce() and Validator::check() into aliases
 * Add Factory::setConfig(), getConfig(), addConfig() & removeConfig()
 * Make type-coercion a checkMode option, don't pass $coerce everywhere
 * Add some extra tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ install:
   - travis_retry composer install --no-interaction --prefer-dist
 
 script:
-  - if [[ "$WITH_COVERAGE" == "true" ]]; then composer coverage; else composer test; fi
+  - if [[ "$WITH_COVERAGE" == "true" ]]; then ./vendor/bin/phpunit --coverage-text; else composer test; fi
