--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,7 @@
         }
     }],
     "require": {
-        "php": ">=5.3.3",
-        "marc-mabe/php-enum":"2.3.1"
+        "php": ">=5.3.3"
     },
     "require-dev": {
         "json-schema/JSON-Schema-Test-Suite": "1.2.0",
