--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "json-schema/JSON-Schema-Test-Suite": "1.2.0",
         "phpunit/phpunit": "^4.8.22",
         "friendsofphp/php-cs-fixer": "^2.1",
-        "phpdocumentor/phpdocumentor": "~2"
+		"sami/sami": "^4.0"
     },
     "autoload": {
         "psr-4": { "JsonSchema\\": "src/JsonSchema/" }
