--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "marc-mabe/php-enum": "2.3.1",
+        "marc-mabe/php-enum":"^2.0 || ^3.0",
         "icecave/parity": "1.0.0"
     },
     "require-dev": {
