--- a/composer.json
+++ b/composer.json
@@ -57,10 +57,10 @@
         }
     },
     "scripts": {
-        "test" : "vendor/bin/phpunit",
-        "testOnly" : "vendor/bin/phpunit --colors --filter",
-        "coverage" : "vendor/bin/phpunit --coverage-text",
-        "style-check" : "vendor/bin/php-cs-fixer fix --dry-run --verbose --diff",
-        "style-fix" : "vendor/bin/php-cs-fixer fix --verbose"
+        "test" : "phpunit",
+        "testOnly" : "phpunit --colors --filter",
+        "coverage" : "phpunit --coverage-text",
+        "style-check" : "php-cs-fixer fix --dry-run --verbose --diff",
+        "style-fix" : "php-cs-fixer fix --verbose"
     }
 }
