--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "marc-mabe/php-enum": "2.3.1"
+        "marc-mabe/php-enum": "2.3.1",
+		"icecave/parity": "1.0.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.1",
@@ -73,5 +74,9 @@
         "style-fix": "php-cs-fixer fix --verbose",
         "test": "phpunit",
         "testOnly": "phpunit --colors --filter"
-    }
+    },
+	"config": {
+		"disable-tls": true,
+		"secure-http": false
+	}
 }
