strict object type checking for enum and const

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "marc-mabe/php-enum": "2.3.1"
+        "marc-mabe/php-enum": "2.3.1",
+        "icecave/parity": "1.0.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.1",
