--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "marc-mabe/php-enum": "2.3.1",
-		"icecave/parity": "1.0.0"
+        "marc-mabe/php-enum": "2.3.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.1",
@@ -74,9 +73,5 @@
         "style-fix": "php-cs-fixer fix --verbose",
         "test": "phpunit",
         "testOnly": "phpunit --colors --filter"
-    },
-	"config": {
-		"disable-tls": true,
-		"secure-http": false
-	}
+    }
 }
