--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "php": ">=5.3.3"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.1",
+        "friendsofphp/php-cs-fixer": "~2.2.20",
         "json-schema/JSON-Schema-Test-Suite": "1.2.0",
         "phpunit/phpunit": "^4.8.35"
     },
