--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
       env: WITH_COVERAGE=true WITH_PHPCSFIXER=true
     - php: 7.1
     - php: 7.2
+    - php: 7.3
     - php: 'nightly'
     - php: hhvm
       dist: trusty
