Add .php_cs.dist to .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 .gitignore          export-ignore
 .travis.yml         export-ignore
 phpunit.dist.xml    export-ignore
+.php_cs.dist        export-ignore
