turning yoda style off to preserve previous behaviour

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -23,6 +23,7 @@ $config
         'pre_increment' => false,
         'simplified_null_return' => false,
         'trailing_comma_in_multiline_array' => false,
+        'yoda_style' => false,
     ))
     ->setFinder($finder)
 ;
