--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,12 @@ matrix:
     - php: 5.5
     - php: 5.6
     - php: 7.0
-      env: WITH_COVERAGE=true WITH_PHPCSFIXER=true
+      env: WITH_COVERAGE=true
+    - php: 7.0
+      env: WITH_PHPCSFIXER=true
     - php: 7.1
     - php: 7.2
+    - php: 7.3
     - php: 'nightly'
     - php: hhvm
       dist: trusty
