--- a/composer.json
+++ b/composer.json
@@ -28,12 +28,13 @@
     ],
     "require": {
         "php": ">=5.3.3",
+        "ext-json": "*",
         "marc-mabe/php-enum":"^2.0 || ^3.0",
         "icecave/parity": "1.0.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.2.20||~2.15.1",
-        "json-schema/JSON-Schema-Test-Suite": "1.2.0",
+        "json-schema/JSON-Schema-Test-Suite": "2.0.0",
         "phpunit/phpunit": "^4.8.35"
     },
     "extra": {
@@ -56,11 +57,11 @@
             "type": "package",
             "package": {
                 "name": "json-schema/JSON-Schema-Test-Suite",
-                "version": "1.2.0",
+                "version": "2.0.0",
                 "source": {
                     "type": "git",
                     "url": "https://github.com/json-schema/JSON-Schema-Test-Suite",
-                    "reference": "1.2.0"
+                    "reference": "2.0.0"
                 }
             }
         }
