--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /docs               export-ignore
 /tests              export-ignore
+.gitattributes      export-ignore
 .gitignore          export-ignore
 .travis.yml         export-ignore
 phpunit.dist.xml    export-ignore
