--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -14,6 +14,7 @@ $config
         'array_syntax' => array('syntax' => 'long'),
         'binary_operator_spaces' => false,
         'concat_space' => array('spacing' => 'one'),
+        'no_alias_functions' => true,
         'no_useless_else' => true,
         'no_useless_return' => true,
         'ordered_imports' => true,
