--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -29,6 +29,7 @@ $config
         'phpdoc_types_order' => array('null_adjustment' => 'none', 'sort_algorithm' => 'none'),
     ))
     ->setFinder($finder)
+    ->setRiskyAllowed(true)
 ;
 
 return $config;
