--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /docs               export-ignore
 /tests              export-ignore
+/tools              export-ignore
 .gitattributes      export-ignore
 .gitignore          export-ignore
 .travis.yml         export-ignore
