--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,6 @@
         "icecave/parity": "1.0.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "~2.2.20",
         "json-schema/JSON-Schema-Test-Suite": "1.2.0",
         "phpunit/phpunit": "^4.8.35"
     },
@@ -70,8 +69,15 @@
     ],
     "scripts": {
         "coverage": "phpunit --coverage-text",
-        "style-check": "php-cs-fixer fix --dry-run --verbose --diff",
-        "style-fix": "php-cs-fixer fix --verbose",
+        "install-development-tools": "composer install --working-dir=./tools",
+        "style-check": [
+            "@install-development-tools",
+            "./tools/vendor/bin/php-cs-fixer fix --dry-run --verbose --diff"
+        ],
+        "style-fix": [
+            "@install-development-tools",
+            "./tools/vendor/bin/php-cs-fixer fix --verbose"
+        ],
         "test": "phpunit",
         "testOnly": "phpunit --colors --filter"
     }
