--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "marc-mabe/php-enum":"^2.0 || ^3.0",
-        "icecave/parity": "1.0.0"
+        "icecave/parity": "1.0.0",
+        "marc-mabe/php-enum":"^2.0 || ^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.2.20||~2.15.1",
@@ -74,5 +74,8 @@
         "style-fix": "php-cs-fixer fix --verbose",
         "test": "phpunit",
         "testOnly": "phpunit --colors --filter"
+    },
+    "config": {
+        "sort-packages": true
     }
 }
