--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: php
 
 cache:
@@ -23,12 +22,13 @@ matrix:
     - php: 7.1
     - php: 7.2
     - php: 7.3
-    - php: 'nightly'
-    - php: hhvm
+    - php: 7.4
+    - php: nightly
+    - php: hhvm-3.18
       dist: trusty
   allow_failures:
-    - php: 'nightly'
-    - php: hhvm
+    - php: nightly
+    - php: hhvm-3.18
 
 before_install:
   - if [[ "$WITH_COVERAGE" != "true" && "$TRAVIS_PHP_VERSION" != "hhvm" && "$TRAVIS_PHP_VERSION" != "nightly" && "$TRAVIS_PHP_VERSION" != "7.1" ]]; then phpenv config-rm xdebug.ini; fi
