--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
-/docs               export-ignore
-/tests              export-ignore
-.gitattributes      export-ignore
-.gitignore          export-ignore
-.travis.yml         export-ignore
-phpunit.dist.xml    export-ignore
+/demo export-ignore
+/docs export-ignore
+/tests export-ignore
+/.gitattributes export-ignore
+/.gitignore export-ignore
+/.php_cs.dist export-ignore
+/.travis.yml export-ignore
+/phpunit.xml.dist export-ignore
