--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.2.20||~2.15.1",
         "json-schema/json-schema-test-suite": "1.2.0",
-        "phpunit/phpunit": "^4.8.35"
+        "phpunit/phpunit": "^4.8.35",
+        "squizlabs/php_codesniffer": "~3.5"
     },
     "extra": {
         "branch-alias": {
