--- a/.github/workflows/style-check.yml
+++ b/.github/workflows/style-check.yml
@@ -1,4 +1,4 @@
-name: "Code Coverage"
+name: "Style Check"
 
 on:
   - push
@@ -9,7 +9,7 @@ env:
 
 jobs:
   tests:
-    name: "Code Coverage"
+    name: "Style Check"
 
     runs-on: ubuntu-latest
 
@@ -20,14 +20,14 @@ jobs:
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
         with:
+          coverage: "none"
           extensions: "intl, zip"
           ini-values: "memory_limit=-1, phar.readonly=0, error_reporting=E_ALL, display_errors=On"
           php-version: "7.4"
           tools: composer
-          coverage: xdebug2
 
       - name: "Update dependencies"
         run: "composer update ${{ env.COMPOSER_FLAGS }}"
 
-      - name: "Run coverage"
-        run: "composer coverage"
+      - name: "Run style-check"
+        run: "composer style-check"
