--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -23,7 +23,8 @@ $config
         'pre_increment' => false,
         'increment_style' => false,
         'simplified_null_return' => false,
-        'trailing_comma_in_multiline_array' => false,
+        'single_line_throw' => false,
+        'trailing_comma_in_multiline' => false,
         'yoda_style' => false,
         'phpdoc_types_order' => array('null_adjustment' => 'none', 'sort_algorithm' => 'none'),
         'no_superfluous_phpdoc_tags' => false,
