--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,10 @@
+/.github export-ignore
 /demo export-ignore
 /docs export-ignore
 /tests export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.php_cs.dist export-ignore
-/.travis.yml export-ignore
+/.php-cs-fixer.dist export-ignore
+/phpstan-baseline.neon export-ignore
+/phpstan.neon export-ignore
 /phpunit.xml.dist export-ignore
