Another attempt to make it work under PHP 5.3 and PHP 8+

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -26,7 +26,7 @@ jobs:
           - "7.2"
           - "7.3"
           - "7.4"
-#          - "8.0"
+          - "8.0"
         dependencies: [highest]
         experimental: [false]
         include:
@@ -36,15 +36,15 @@ jobs:
           - php-version: "5.3"
             dependencies: lowest
             experimental: false
-#          - php-version: "8.0"
-#            dependencies: highest
-#            experimental: false
-#          - php-version: "8.1"
-#            dependencies: lowest-ignore
-#            experimental: true
-#          - php-version: "8.1"
-#            dependencies: highest-ignore
-#            experimental: true
+          - php-version: "8.0"
+            dependencies: highest
+            experimental: false
+          - php-version: "8.1"
+            dependencies: lowest-ignore
+            experimental: true
+          - php-version: "8.1"
+            dependencies: highest-ignore
+            experimental: true
 
     steps:
       - name: "Checkout"
