--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,13 @@
     "require": {
         "php": ">=5.3.3",
         "marc-mabe/php-enum":"^2.0 || ^3.0 || ^4.0",
-        "icecave/parity": "1.0.0"
+        "icecave/parity": ">=1.0.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.2.20 || ~2.19.0",
         "json-schema/json-schema-test-suite": "1.2.0",
-        "sanmai/phpunit-legacy-adapter": "^6.4 || ^8.2.1"
+        "sanmai/phpunit-legacy-adapter": "^6.4 || ^8.2.1",
+        "phpspec/prophecy": "^1.15"
     },
     "extra": {
         "branch-alias": {
