--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,7 @@
         "json-schema/json-schema-test-suite": "1.2.0",
         "phpunit/phpunit": ">=4.8.36 <10",
         "sanmai/phpunit-legacy-adapter": "^6.4 || ^8.2.1",
-        "phpspec/prophecy-phpunit": ">=1.0",
-        "phpunitgoodpractices/polyfill": "^1.6"
+        "phpspec/prophecy-phpunit": ">=1.0"
     },
     "extra": {
         "branch-alias": {
