--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,7 @@
         "coverage": "phpunit --coverage-text",
         "style-check": "php-cs-fixer fix --dry-run --verbose --diff",
         "style-fix": "php-cs-fixer fix --verbose",
-        "test": "phpunit",
+        "test": "phpunit --verbose",
         "testOnly": "phpunit --colors --filter"
     }
 }
