--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,8 +1,12 @@
 name: "Continuous Integration"
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 env:
   COMPOSER_FLAGS: "--ansi --no-interaction --no-progress --prefer-dist"
@@ -17,23 +21,20 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - "5.3"
-          - "5.4"
-          - "5.5"
-          - "5.6"
-          - "7.0"
-          - "7.1"
           - "7.2"
           - "7.3"
           - "7.4"
-#          - "8.0"
+          - "8.0"
+          - "8.1"
+          - "8.2"
+          - "8.3"
         dependencies: [highest]
         experimental: [false]
         include:
-          - php-version: "5.3"
+          - php-version: "7.2"
             dependencies: highest
             experimental: false
-          - php-version: "5.3"
+          - php-version: "7.2"
             dependencies: lowest
             experimental: false
 #          - php-version: "8.0"
