--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,15 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
+        "php": "^7.2 || ^8.0",
         "marc-mabe/php-enum":"^2.0 || ^3.0 || ^4.0",
-        "icecave/parity": "1.0.0"
+        "icecave/parity": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.2.20 || ~2.19.0",
         "json-schema/json-schema-test-suite": "1.2.0",
-        "phpunit/phpunit": "^4.8.35"
+        "phpunit/phpunit": "^8.5",
+        "phpspec/prophecy": "^1.19"
     },
     "extra": {
         "branch-alias": {
