--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     ],
     "require": {
         "php": "^7.2 || ^8.0",
+        "ext-json": "*",
         "marc-mabe/php-enum":"^2.0 || ^3.0 || ^4.0",
         "icecave/parity": "^3.0"
     },
