--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "icecave/parity": "^3.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "~2.2.20 || ~2.19.0",
+        "friendsofphp/php-cs-fixer": "3.3.0",
         "json-schema/json-schema-test-suite": "1.2.0",
         "phpunit/phpunit": "^8.5",
         "phpspec/prophecy": "^1.19",
